[tool.poetry]
name = "advanced-git"
version = "0.1.0"
description = ""
authors = ["Tristan Kuehn <tkuehn@uwo.ca>"]
readme = "README.md"
packages = [{include = "advanced_git"}]

[tool.poetry.dependencies]
python = "^3.7.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.2"
pyright = "^1.1.303"
isort = "^5.11.5"

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
